tests: Assertj migration
Also:
 - minor code improvements
 - fix warnings